testsuite/poke.pkl/sub-integers-overflow-diag-2.pk
/* { dg-do compile } */

var res
  = -0x80000000_00000000 - 1; /* { dg-error "overflow" } */
